# lancedb

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  README.md  REVIEW.md  RUST_THIRD_PARTY_LICENSES.html  about.toml  deny.toml  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pyright_report.csv  release_process.md  rust-toolchain.toml  test.py  verify_fix.py
c/: CMakeLists.txt  Cargo.toml  README.md
c/examples/: full.cpp  simple.cpp
c/include/: lancedb.h
c/src/: connection.rs  error.rs  index.rs  lib.rs  query.rs  table.rs  types.rs
golang/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  go.mod  go.sum
golang/.cargo/: config.toml
golang/examples/: README.md
golang/examples/basic_crud/: basic_crud.go
golang/examples/batch_operations/: batch_operations.go
golang/examples/hybrid_search/: hybrid_search.go
golang/examples/index_management/: index_management.go
golang/examples/index_operations_example/: main.go
golang/examples/storage_configuration/: storage_configuration.go
golang/examples/vector_search/: vector_search.go
golang/pkg/: add_method_test.go  connection.go  data_operations_test.go  doc.go  get_all_indexes_test.go  query.go  schema.go  select_test.go  storage_options_test.go  table.go  table_methods_test.go
golang/src/: connection.rs  database.rs  error.rs  lib.rs  lib_simple.rs  query_simple.rs  schema_simple.rs  simple.rs  table_simple.rs  types.rs
java/core/lancedb-jni/: Cargo.toml
nodejs/: .eslintignore  .eslintrc.js  .npmignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NODEJS_THIRD_PARTY_LICENSES.md  README.md  RUST_THIRD_PARTY_LICENSES.html  biome.json  build.rs  eslint.config.js  jest.config.js  license_header.txt  native.d.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  typedoc.json  typedoc_post_process.js
nodejs/__test__/: arrow.test.ts  connection.test.ts  embedding.test.ts  expr.test.ts  index.test.ts  metadata.test.ts  otel.test.ts  permutation.test.ts  query.test.ts  read_files.test.ts  registry.test.ts  remote.test.ts  rerankers.test.ts  s3_integration.test.ts  sanitize.test.ts  scannable.test.ts  session.test.ts  table.test.ts  tls_config.test.ts  transformers.test.ts  tsconfig.json  util.test.ts  vector_types.test.ts
nodejs/__test__/docs/: basic.test.ts  embedding.test.ts  tables.test.ts
nodejs/docs/: rate_limiting.md
nodejs/examples/: .gitignore  ann_indexes.test.ts  ann_indexes.ts  basic.test.ts  basic.ts  biome.json  cloud.test.ts  custom_embedding_function.test.ts  custom_embedding_function.ts  embedding.test.ts  embedding.ts  filtering.test.ts  filtering.ts  full_text_search.test.ts  full_text_search.ts  jest.config.cjs  merge_insert.test.ts  mtls_example.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rate_limiting.ts  search.test.ts  search.ts  sentence-transformers.js  sentence-transformers.test.ts  tsconfig.json  util.ts
nodejs/lancedb/: arrow.ts  connection.ts  errors.ts  expr.ts  file_source.ts  header.ts  index.ts  indexer.ts  indices.ts  merge.ts  native.d.ts  native.js  oauth.ts  otel.ts  permutation.ts  query.ts  sanitize.ts  scannable.ts  session.ts  storage_options.ts  table.ts  util.ts
nodejs/lancedb/embedding/: embedding_function.ts  index.ts  openai.ts  registry.ts  transformers.ts  utils.ts
nodejs/lancedb/remote/: client.ts  connection.ts  index.ts  table.ts
nodejs/lancedb/rerankers/: index.ts  rrf.ts
nodejs/npm/darwin-arm64/: README.md  package.json
nodejs/npm/darwin-x64/: README.md  package.json
nodejs/npm/linux-arm64-gnu/: README.md  package.json
nodejs/npm/linux-arm64-musl/: README.md  package.json
nodejs/npm/linux-x64-gnu/: README.md  package.json
nodejs/npm/linux-x64-musl/: README.md  package.json
nodejs/npm/win32-arm64-msvc/: README.md  package.json
nodejs/npm/win32-x64-msvc/: README.md  package.json
nodejs/src/: connection.rs  error.rs  header.rs  index.rs  iterator.rs  lib.rs  merge.rs  otel.rs  permutation.rs  query.rs  read_files.rs  reference.rs  remote.rs  rerankers.rs  scannable.rs  session.rs  table.rs  util.rs
nodejs/vectordb/: arrow.ts  connection.ts  index.ts  native.d.ts  native.js  query.ts  table.ts
python/: .bumpversion.cfg  .bumpversion.toml  .gitignore  AGENTS.md  ASYNC_MIGRATION.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PYTHON_THIRD_PARTY_LICENSES.md  README.md  RUST_THIRD_PARTY_LICENSES.html  __init__.py  build.rs  bulk_upload_demo.ipynb  license_header.txt  pyproject.toml  reproduce_issue.py  setup.py  test.py
python/benchmarks/: bench_streaming_dataloader.py
python/lancedb/: __init__.py  common.py  conftest.py  context.py  db.py  embeddings.py  exceptions.py  fts.py  merge.py  pydantic.py  query.py  schema.py  table.py  telemetry.py  util.py
python/lancedb/cli/: cli.py
python/lancedb/embeddings/: __init__.py  base.py  bedrock.py  cohere.py  functions.py  gemini_text.py  gte.py  imagebind.py  (+7 more)
python/src/: arrow.rs  connection.rs  data.rs  embedding.rs  error.rs  expr.rs  header.rs  index.rs  lib.rs  namespace.rs  oauth.rs  otel.rs  permutation.rs  query.rs  runtime.rs  session.rs  storage_options.rs  table.rs  util.rs
python/tests/: test_cli.py  test_context.py  test_db.py  test_e2e_remote_db.py  test_embedding_fine_tuning.py  test_embeddings.py  test_embeddings_slow.py  test_expr.py  test_fts.py  test_io.py  test_oauth.py  test_otel.py  test_pydantic.py  test_query.py  test_remote_client.py  test_remote_db.py  test_remote_table.py  test_rerankers.py  test_schema.py  test_table.py  test_telemetry.py  test_util.py
rust/: CONTRIBUTING.md  Cargo.toml  Makefile
rust/lancedb/: Cargo.toml  Makefile  README.md
rust/lancedb-core/: Cargo.toml  README.md
rust/lancedb-embedding/: Cargo.toml
rust/lancedb-remote-catalog-client/: Cargo.toml  README.md
rust/lancedb-reranker/: Cargo.toml
rust/lancedb-table/: Cargo.toml
rust/lancedb-wasm/: Cargo.toml
rust/vectordb/: Cargo.toml  README.md
(+1278 files in other folders)
