[package]
name = "lancedb-go"
version = "0.25.1-beta.1"
edition.workspace = true
description = "CGO bindings for LanceDB"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "lancedb_go"
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

[dependencies]
lancedb = { path = "../rust/lancedb", default-features = false }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
libc = "0.2"
log = { workspace = true }
env_logger = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-data = { workspace = true }
arrow-schema = { workspace = true }
arrow-ord = { workspace = true }
arrow-cast = { workspace = true }
arrow-ipc.workspace = true
serde_json = "1.0"
tokio-stream = "0.1"

[target.aarch64-apple-darwin.dependencies]

[target.x86_64-apple-darwin.dependencies]

[features]
default = []
remote = ["lancedb/remote"]
fp16kernels = ["lancedb/fp16kernels"]

[build-dependencies]
cbindgen = "0.26"
