[package]
name = "lancedb-python"
version = "0.25.4-beta.2"
edition.workspace = true
description = "Python bindings for LanceDB"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version = "1.75.0"

[lib]
name = "_lancedb"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "56.2", features = ["pyarrow"] }
async-trait = "0.1"
lancedb = { path = "../rust/lancedb", default-features = false }
lance-core.workspace = true
lance-io.workspace = true
env_logger.workspace = true
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.25", features = [
    "attributes",
    "tokio-runtime",
] }
pin-project = "1.1.5"
futures.workspace = true
snafu.workspace = true
tokio = { version = "1.40", features = ["sync"] }

[build-dependencies]
pyo3-build-config = { version = "0.25", features = [
    "extension-module",
    "abi3-py39",
] }

[features]
default = ["remote", "lancedb/default"]
fp16kernels = ["lancedb/fp16kernels"]
remote = ["lancedb/remote"]
