[project]
name = "lancedb"
# version in Cargo.toml
dependencies = [
    "deprecation",
    "pylance==0.16.1",
    "ratelimiter~=1.0",
    "requests>=2.31.0",
    "retry>=0.9.2",
    "tqdm>=4.27.0",
    "pydantic>=1.10",
    "attrs>=21.3.0",
    "packaging",
    "cachetools",
    "overrides>=0.7",
]
description = "lancedb"
authors = [{ name = "LanceDB Devs", email = "dev@lancedb.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "data-format",
    "data-science",
    "machine-learning",
    "arrow",
    "data-analytics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
repository = "https://github.com/lancedb/lancedb"

[project.optional-dependencies]
tests = [
    "aiohttp",
    "boto3",
    "pandas>=1.4",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "duckdb",
    "pytz",
    "polars>=0.19, <=1.3.0",
    "tantivy",
]
dev = ["ruff", "pre-commit"]
docs = ["mkdocs", "mkdocs-jupyter", "mkdocs-material", "mkdocstrings[python]"]
clip = ["torch", "pillow", "open-clip"]
embeddings = [
    "openai>=1.6.1",
    "sentence-transformers",
    "torch",
    "pillow",
    "open-clip-torch",
    "cohere",
    "huggingface_hub",
    "InstructorEmbedding",
    "google.generativeai",
    "boto3>=1.28.57",
    "awscli>=1.29.57",
    "botocore>=1.31.57",
    "ollama",
    "ibm-watsonx-ai>=1.1.2",
]
azure = ["adlfs>=2024.2.0"]

[tool.maturin]
python-source = "python"
module-name = "lancedb._lancedb"

[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[tool.ruff.lint]
select = ["F", "E", "W", "G", "TCH", "PERF"]

[tool.pytest.ini_options]
addopts = "--strict-markers --ignore-glob=lancedb/embeddings/*.py"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "asyncio",
    "s3_test",
]
