[package]
name = "lancedb-client"
version = "0.0.1"
authors = ["OpenAPI Generator team and contributors"]
description = "REST interface for managing LanceDB databases and tables"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
